--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "marimo[recommended]>=0.18.2",
     "matplotlib>=3.10.7",
     "mlflow>=3.6.0",
+    "nltk>=3.9.2",
     "numpy>=2.3.5",
     "pandas>=2.3.3",
     "scikit-learn>=1.7.2",
